Reduced hero video and product image sizes, preserved all features

--- a/home.html
+++ b/home.html
@@ -15,42 +15,40 @@
     }
   </style>
 </head>
-<body class="bg-yellow-50 text-gray-900">
+<body class="bg-yellow-50 text-gray-900 text-sm">
 
 <!-- Header -->
-<header class="bg-red-800 text-white py-4 px-6 flex items-center justify-between shadow-md">
-  <h1 class="text-2xl font-bold">MajeeoNuts</h1>
-  <nav class="space-x-6 text-sm">
+<header class="bg-red-800 text-white py-3 px-4 flex items-center justify-between shadow-md">
+  <h1 class="text-xl font-bold">MajeeoNuts</h1>
+  <nav class="space-x-4">
     <a href="home.html" class="hover:underline">Home</a>
     <a href="about.html" class="hover:underline">About Us</a>
     <a href="contact.html" class="hover:underline">Contact Us</a>
   </nav>
-  <input type="text" id="searchInput" placeholder="Search products..." class="ml-4 px-2 py-1 rounded border text-gray-900 border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-600 text-sm" />
+  <input type="text" id="searchInput" placeholder="Search..." class="ml-4 px-2 py-1 rounded border text-gray-900 border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-600 text-xs w-32" />
 </header>
 
 <!-- Hero Section -->
-<section class="max-w-7xl mx-auto mt-6 px-4 flex flex-col md:flex-row gap-6">
+<section class="max-w-5xl mx-auto mt-4 px-2 flex flex-col md:flex-row gap-4">
   <!-- Video -->
-  <div class="w-full md:w-3/4 rounded-xl overflow-hidden shadow-lg">
-    <video class="w-full aspect-square object-cover rounded-xl" controls>
+  <div class="w-full md:w-2/3 rounded-lg overflow-hidden shadow">
+    <video class="w-full aspect-square h-[220px] object-cover rounded-lg" controls>
       <source src="media/majeeoNuts_dryfruits_homepage_video.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
   <!-- Cart -->
-  <aside class="bg-white rounded-xl shadow-md p-6 h-max md:w-1/4">
-    <h2 class="text-2xl font-bold mb-4">Your Cart</h2>
-    <div id="cart-items" class="space-y-4 text-sm">
+  <aside class="bg-white rounded-lg shadow p-4 h-max md:w-1/3">
+    <h2 class="text-lg font-bold mb-2">Your Cart</h2>
+    <div id="cart-items" class="space-y-3 text-xs">
       <p class="text-gray-500">Your cart is empty.</p>
     </div>
-    <button id="checkout-btn" class="mt-4 w-full bg-red-700 text-white py-2 rounded" disabled>Checkout</button>
+    <button id="checkout-btn" class="mt-3 w-full bg-red-700 text-white py-1 rounded text-sm" disabled>Checkout</button>
   </aside>
 </section>
 
 <!-- Product Grid -->
-<div class="max-w-7xl mx-auto p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 text-sm">
-
-  <!-- JS-generated product list -->
+<div class="max-w-5xl mx-auto p-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
   <script>
     const products = [
       { name: "Premium Almonds (Badam)", img: "images/almonds.webp", price: 1000, desc: "High-quality California almonds, rich in antioxidants and healthy fats." },
@@ -68,16 +66,16 @@
       products.forEach(p => {
         const html = `
         <article class="bg-white rounded-lg shadow p-3">
-          <h2 class="font-semibold mb-1 text-base">${p.name}</h2>
-          <img src="${p.img}" alt="${p.name}" class="w-full aspect-square object-cover rounded mb-1" />
+          <h2 class="font-semibold mb-1 text-sm leading-tight">${p.name}</h2>
+          <img src="${p.img}" alt="${p.name}" class="w-full aspect-square object-cover rounded mb-2 h-32" />
           <p class="text-red-700 font-bold mb-1">₹${p.price}/kg</p>
-          <p class="text-gray-700 mb-1">${p.desc}</p>
-          <select class="p-1 border rounded mb-2 quantity-select text-sm">
+          <p class="text-gray-700 text-xs mb-1">${p.desc}</p>
+          <select class="p-1 border rounded mb-2 quantity-select text-xs">
             <option value="250">250g</option>
             <option value="500">500g</option>
             <option value="1000" selected>1kg</option>
           </select>
-          <button class="add-to-cart w-full bg-red-600 text-white py-1 rounded" data-name="${p.name}" data-price-per-kg="${p.price}">Add to Cart</button>
+          <button class="add-to-cart w-full bg-red-600 text-white py-1 text-xs rounded" data-name="${p.name}" data-price-per-kg="${p.price}">Add to Cart</button>
         </article>`;
         container.insertAdjacentHTML("beforeend", html);
       });
@@ -86,15 +84,15 @@
 </div>
 
 <!-- Footer -->
-<footer class="bg-white border-t mt-16">
-  <div class="bg-gray-100 py-8 px-4 sm:px-6 lg:px-16">
-    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+<footer class="bg-white border-t mt-12">
+  <div class="bg-gray-100 py-6 px-4 sm:px-6 lg:px-16">
+    <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-xs">
       <div>
-        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-24 mb-2">
-        <p class="text-gray-600">Majeeo Nuts brings you a collection of carefully selected dry fruits from India and across the world.</p>
+        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2">
+        <p class="text-gray-600">Majeeo Nuts brings you carefully selected dry fruits from India and across the world.</p>
       </div>
       <div>
-        <h4 class="font-semibold text-gray-800 mb-2">Quick Links</h4>
+        <h4 class="font-semibold text-gray-800 mb-1">Quick Links</h4>
         <ul class="text-gray-600 space-y-1">
           <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
           <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
@@ -103,7 +101,7 @@
         </ul>
       </div>
       <div>
-        <h4 class="font-semibold text-gray-800 mb-2">Account Info</h4>
+        <h4 class="font-semibold text-gray-800 mb-1">Account Info</h4>
         <ul class="text-gray-600 space-y-1">
           <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
           <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
@@ -112,8 +110,8 @@
         </ul>
       </div>
       <div>
-        <h4 class="font-semibold text-gray-800 mb-2">Contact Details</h4>
-        <ul class="text-gray-600 space-y-2">
+        <h4 class="font-semibold text-gray-800 mb-1">Contact Details</h4>
+        <ul class="text-gray-600 space-y-1">
           <li>📍 Mumbai, India</li>
           <li>✉️ maheshgawade7799@gmail.com</li>
           <li>📞 +91-7483600212</li>
@@ -140,13 +138,13 @@
     checkoutBtn.disabled = false;
     cart.forEach((item, index) => {
       const itemDiv = document.createElement("div");
-      itemDiv.className = "border p-3 rounded flex justify-between items-start";
+      itemDiv.className = "border p-2 rounded flex justify-between items-center";
       itemDiv.innerHTML = `
         <div>
           <p class="font-semibold">${item.name}</p>
           <p>${item.grams}g for ₹${item.price.toFixed(2)}</p>
         </div>
-        <button class="text-red-600" onclick="removeItem(${index})">Remove</button>
+        <button class="text-red-600 text-xs" onclick="removeItem(${index})">Remove</button>
       `;
       cartItemsDiv.appendChild(itemDiv);
     });
@@ -181,9 +179,7 @@
         cart.length = 0;
         renderCart();
       },
-      prefill: {
-        email: "maheshgawade7799@gmail.com"
-      },
+      prefill: { email: "maheshgawade7799@gmail.com" },
       theme: { color: "#b91c1c" }
     };
     const rzp = new Razorpay(options);
