--- a/index.html
+++ b/index.html
@@ -51,23 +51,28 @@
 <div class="max-w-5xl mx-auto p-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
   <script>
     const products = [
-      { name: "Premium Almonds (Badam)", img: "images/almonds.webp", price: 1000, desc: "High-quality California almonds, rich in antioxidants and healthy fats." },
-      { name: "Premium Cashews (Kaju)", img: "images/cashews.avif", price: 1200, desc: "Fresh, creamy cashews packed with protein and essential minerals." },
-      { name: "Mamra Almonds (Organic)", img: "images/mamra_almonds.webp", price: 1600, desc: "Premium organic Mamra almonds for extra crunch and health." },
-      { name: "Pista (Pistachios)", img: "images/Pista.jpg", price: 1400, desc: "Crunchy, lightly salted pistachios packed with flavor and nutrition." },
-      { name: "Walnut (Akhrot)", img: "images/Walnut.png", price: 1300, desc: "Brain-boosting walnuts rich in Omega-3 and antioxidants." },
-      { name: "Raisins (Kishmish)", img: "images/Raisins.png", price: 600, desc: "Sweet, sun-dried raisins full of natural sugars and fiber." },
-      { name: "Mix Dry Fruits", img: "images/Mix_Dryfruits.jpg", price: 1500, desc: "A perfect mix of almonds, cashews, pista, raisins and figs." },
-      { name: "Anjeer (Figs)", img: "images/Anjeer.png", price: 900, desc: "Naturally sweet sun-dried figs, rich in fiber and iron." }
+      { name: "Premium Almonds (Badam)", img: "images/almonds.webp", price: 1000, desc: "High-quality California almonds, rich in antioxidants and healthy fats.", best: true, link: "product-almonds.html" },
+      { name: "Premium Cashews (Kaju)", img: "images/cashews.avif", price: 1200, desc: "Fresh, creamy cashews packed with protein and essential minerals.", best: true, link: "product-cashews.html" },
+      { name: "Mamra Almonds (Organic)", img: "images/mamra_almonds.webp", price: 1600, desc: "Premium organic Mamra almonds for extra crunch and health.", link: "product-mamra.html" },
+      { name: "Pista (Pistachios)", img: "images/Pista.jpg", price: 1400, desc: "Crunchy, lightly salted pistachios packed with flavor and nutrition.", link: "product-pista.html" },
+      { name: "Walnut (Akhrot)", img: "images/Walnut.png", price: 1300, desc: "Brain-boosting walnuts rich in Omega-3 and antioxidants.", link: "product-walnut.html" },
+      { name: "Raisins (Kishmish)", img: "images/Raisins.png", price: 600, desc: "Sweet, sun-dried raisins full of natural sugars and fiber.", link: "product-raisins.html" },
+      { name: "Mix Dry Fruits", img: "images/Mix_Dryfruits.jpg", price: 1500, desc: "A perfect mix of almonds, cashews, pista, raisins and figs.", link: "product-mix.html" },
+      { name: "Anjeer (Figs)", img: "images/Anjeer.png", price: 900, desc: "Naturally sweet sun-dried figs, rich in fiber and iron.", link: "product-anjeer.html" }
     ];
 
     document.addEventListener("DOMContentLoaded", () => {
       const container = document.querySelector(".grid");
       products.forEach(p => {
         const html = `
-        <article class="bg-white rounded-lg shadow p-3">
-          <h2 class="font-semibold mb-1 text-sm leading-tight">${p.name}</h2>
-          <img src="${p.img}" alt="${p.name}" class="w-full aspect-square object-cover rounded mb-2 h-32" />
+        <article class="bg-white rounded-lg shadow p-3 relative">
+          ${p.best ? '<span class="absolute top-2 right-2 bg-red-600 text-white text-[10px] px-2 py-0.5 rounded">Best Seller</span>' : ''}
+          <h2 class="font-semibold mb-1 text-sm leading-tight">
+            <a href="${p.link}" class="hover:underline">${p.name}</a>
+          </h2>
+          <a href="${p.link}">
+            <img src="${p.img}" alt="${p.name}" class="w-full aspect-square object-cover rounded mb-2 h-32" />
+          </a>
           <p class="text-red-700 font-bold mb-1">₹${p.price}/kg</p>
           <p class="text-gray-700 text-xs mb-1">${p.desc}</p>
           <select class="p-1 border rounded mb-2 quantity-select text-xs">
@@ -82,44 +87,6 @@
     });
   </script>
 </div>
-
-<!-- Footer -->
-<footer class="bg-white border-t mt-12">
-  <div class="bg-gray-100 py-6 px-4 sm:px-6 lg:px-16">
-    <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-xs">
-      <div>
-        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2">
-        <p class="text-gray-600">Majeeo Nuts brings you carefully selected dry fruits from India and across the world.</p>
-      </div>
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-1">Quick Links</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
-          <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
-          <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
-          <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-1">Account Info</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
-          <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
-          <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
-          <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-1">Contact Details</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li>📍 Mumbai, India</li>
-          <li>✉️ maheshgawade7799@gmail.com</li>
-          <li>📞 +91-7483600212</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</footer>
 
 <!-- Razorpay + Cart -->
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
@@ -138,13 +105,13 @@
     checkoutBtn.disabled = false;
     cart.forEach((item, index) => {
       const itemDiv = document.createElement("div");
-      itemDiv.className = "border p-2 rounded flex justify-between items-center";
+      itemDiv.className = "border p-2 rounded flex justify-between items-start";
       itemDiv.innerHTML = `
         <div>
           <p class="font-semibold">${item.name}</p>
           <p>${item.grams}g for ₹${item.price.toFixed(2)}</p>
         </div>
-        <button class="text-red-600 text-xs" onclick="removeItem(${index})">Remove</button>
+        <button class="text-red-600" onclick="removeItem(${index})">Remove</button>
       `;
       cartItemsDiv.appendChild(itemDiv);
     });
@@ -179,7 +146,9 @@
         cart.length = 0;
         renderCart();
       },
-      prefill: { email: "maheshgawade7799@gmail.com" },
+      prefill: {
+        email: "maheshgawade7799@gmail.com"
+      },
       theme: { color: "#b91c1c" }
     };
     const rzp = new Razorpay(options);
