--- a/product-almonds.html
+++ b/product-almonds.html
@@ -10,7 +10,7 @@
     body { font-family: 'Poppins', sans-serif; }
   </style>
 </head>
-<body class="bg-sky-100 text-gray-800">
+<body class="bg-sky-100 text-gray-800 text-sm">
 
 <!-- Header -->
 <header class="bg-red-800 text-white py-3 px-6 flex items-center justify-between shadow">
@@ -26,10 +26,10 @@
 <section class="max-w-6xl mx-auto p-4 mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
   <!-- Image & Basic Info -->
   <div>
-    <img src="images/almonds.webp" alt="Premium Almonds (Badam)" class="rounded shadow mb-4 w-full aspect-square object-cover"/>
-    <h2 class="text-2xl font-bold mb-2">Premium Almonds (Badam)</h2>
-    <p class="text-sm text-gray-600 mb-1">100 gram</p>
-    <p class="text-red-700 font-bold text-lg mb-3">₹124.00</p>
+    <img src="images/almonds.webp" alt="Premium Almonds (Badam)" class="rounded shadow mb-4 w-full max-w-xs aspect-square object-cover mx-auto"/>
+    <h2 class="text-xl font-bold mb-1 text-center">Premium Almonds (Badam)</h2>
+    <p class="text-center text-gray-600">100 gram</p>
+    <p class="text-center text-red-700 font-bold text-lg mb-4">₹124.00</p>
   </div>
 
   <!-- Product Details -->
@@ -41,10 +41,13 @@
       <li>Gluten Free</li>
       <li>Cholesterol Free</li>
     </ul>
-    <div class="flex gap-3 mt-4">
-      <a href="https://wa.me/917483600212" class="bg-green-600 text-white px-3 py-1 rounded text-xs">WhatsApp Us</a>
-      <a href="tel:+917483600212" class="bg-blue-600 text-white px-3 py-1 rounded text-xs">Call Us</a>
+
+    <!-- Buttons -->
+    <div class="flex flex-col sm:flex-row gap-4 mt-4">
+      <button onclick="addToCart()" class="bg-red-700 text-white px-4 py-2 rounded hover:bg-red-800">Add to Cart</button>
+      <button onclick="buyNow()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Buy Now</button>
     </div>
+
     <p class="mt-2 text-gray-600">SKU: <strong>DRYF101</strong></p>
 
     <hr class="my-4"/>
@@ -99,5 +102,19 @@
   </div>
 </footer>
 
+<!-- Cart + Buy scripts -->
+<script>
+  function addToCart() {
+    alert("Premium Almonds (Badam) added to cart.");
+  }
+
+  function buyNow() {
+    alert("Redirecting to payment gateway...");
+    // Replace below with Razorpay or payment integration
+    // window.location.href = "checkout.html";
+  }
+</script>
+
 </body>
 </html>
+
