--- a/cart.html
+++ b/cart.html
@@ -1,107 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Your Cart - MajeeoNuts</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body { font-family: 'Poppins', sans-serif; }
+    body { font-family: sans-serif; }
   </style>
 </head>
-<body class="bg-yellow-50 text-gray-900">
+<body class="bg-yellow-50 text-gray-900 text-sm">
 
-<header class="bg-red-800 text-white py-4 px-6 flex justify-between items-center">
-  <h1 class="text-xl font-bold">MajeeoNuts</h1>
-  <nav class="space-x-4 text-sm">
-    <a href="home.html" class="hover:underline">Home</a>
-    <a href="about.html" class="hover:underline">About</a>
-    <a href="contact.html" class="hover:underline">Contact</a>
-  </nav>
-</header>
+  <header class="bg-red-800 text-white py-3 px-6 flex justify-between items-center">
+    <h1 class="text-xl font-bold">MajeeoNuts</h1>
+    <a href="home.html" class="text-sm underline hover:text-yellow-300">← Back to Home</a>
+  </header>
 
-<main class="max-w-4xl mx-auto mt-8 p-4 bg-white rounded shadow">
-  <h2 class="text-2xl font-bold mb-4">Your Cart</h2>
-  <div id="cart-items" class="space-y-4"></div>
-  <div class="text-right mt-6">
-    <p class="text-lg font-semibold mb-2">Total: ₹<span id="total-price">0</span></p>
-    <button id="checkout-btn" class="bg-red-700 text-white py-2 px-4 rounded disabled:opacity-50" disabled>Proceed to Payment</button>
-  </div>
-</main>
+  <main class="max-w-3xl mx-auto mt-6 p-4 bg-white rounded shadow">
+    <h2 class="text-xl font-bold mb-4">Your Cart</h2>
+    <div id="cart-items" class="space-y-4"></div>
+    <button id="checkout-btn" class="mt-6 w-full bg-red-600 text-white py-2 rounded text-sm" disabled>Proceed to Payment</button>
+  </main>
 
-<footer class="bg-white border-t mt-12">
-  <div class="bg-gray-100 py-6 px-4 text-center text-sm">
-    &copy; 2025 MajeeoNuts. All rights reserved.
-  </div>
-</footer>
-
-<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<script>
-  const cart = JSON.parse(localStorage.getItem('majeeoCart') || '[]');
-
-  function updateCartDisplay() {
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <script>
+    const cart = JSON.parse(localStorage.getItem("majeeo-cart")) || [];
     const cartDiv = document.getElementById("cart-items");
-    const totalSpan = document.getElementById("total-price");
     const checkoutBtn = document.getElementById("checkout-btn");
-    cartDiv.innerHTML = '';
-    let total = 0;
 
-    if (cart.length === 0) {
-      cartDiv.innerHTML = '<p class="text-gray-500">Your cart is empty.</p>';
-      checkoutBtn.disabled = true;
-      return;
+    function renderCart() {
+      cartDiv.innerHTML = "";
+      if (cart.length === 0) {
+        cartDiv.innerHTML = "<p class='text-gray-500'>Your cart is empty.</p>";
+        checkoutBtn.disabled = true;
+        return;
+      }
+
+      let total = 0;
+      cart.forEach((item, index) => {
+        const itemTotal = (item.price * item.quantity).toFixed(2);
+        total += parseFloat(itemTotal);
+
+        const div = document.createElement("div");
+        div.className = "flex justify-between items-center border p-2 rounded";
+        div.innerHTML = `
+          <div>
+            <p class="font-semibold">${item.name}</p>
+            <p>${item.quantity} x ₹${item.price} = ₹${itemTotal}</p>
+          </div>
+          <button onclick="removeItem(${index})" class="text-red-500 text-sm">Remove</button>
+        `;
+        cartDiv.appendChild(div);
+      });
+
+      checkoutBtn.disabled = false;
+      checkoutBtn.textContent = `Pay ₹${total}`;
     }
 
-    cart.forEach((item, index) => {
-      const itemTotal = item.quantity * item.price;
-      total += itemTotal;
+    function removeItem(index) {
+      cart.splice(index, 1);
+      localStorage.setItem("majeeo-cart", JSON.stringify(cart));
+      renderCart();
+    }
 
-      const itemDiv = document.createElement('div');
-      itemDiv.className = 'flex justify-between items-center border-b pb-2';
-      itemDiv.innerHTML = `
-        <div>
-          <p class="font-semibold">${item.name}</p>
-          <p class="text-sm text-gray-600">${item.quantity} x ₹${item.price} = ₹${itemTotal}</p>
-        </div>
-        <button onclick="removeItem(${index})" class="text-red-600 text-sm">Remove</button>
-      `;
-      cartDiv.appendChild(itemDiv);
+    checkoutBtn.addEventListener("click", () => {
+      const totalAmount = cart.reduce((sum, item) => sum + item.price * item.quantity, 0);
+      const options = {
+        key: "rzp_live_LIqOpioBHDIhG4",
+        amount: Math.round(totalAmount * 100),
+        currency: "INR",
+        name: "MajeeoNuts",
+        description: "Dry Fruits Purchase",
+        handler: function (response) {
+          alert("Payment successful! ID: " + response.razorpay_payment_id);
+          localStorage.removeItem("majeeo-cart");
+          renderCart();
+        },
+        prefill: { email: "maheshgawade7799@gmail.com" },
+        theme: { color: "#b91c1c" }
+      };
+      new Razorpay(options).open();
     });
 
-    totalSpan.textContent = total.toFixed(2);
-    checkoutBtn.disabled = false;
-  }
-
-  function removeItem(index) {
-    cart.splice(index, 1);
-    localStorage.setItem('majeeoCart', JSON.stringify(cart));
-    updateCartDisplay();
-  }
-
-  document.getElementById("checkout-btn").addEventListener("click", () => {
-    const total = cart.reduce((sum, item) => sum + item.price * item.quantity, 0);
-    const options = {
-      key: "rzp_live_LIqOpioBHDIhG4",
-      amount: Math.round(total * 100),
-      currency: "INR",
-      name: "MajeeoNuts",
-      description: "Premium Dry Fruits Purchase",
-      handler: function (response) {
-        alert("Payment successful! Payment ID: " + response.razorpay_payment_id);
-        localStorage.removeItem('majeeoCart');
-        window.location.reload();
-      },
-      prefill: {
-        email: "maheshgawade7799@gmail.com"
-      },
-      theme: { color: "#b91c1c" }
-    };
-    const rzp = new Razorpay(options);
-    rzp.open();
-  });
-
-  updateCartDisplay();
-</script>
-
+    renderCart();
+  </script>
 </body>
 </html>
+
