--- a/home.html
+++ b/home.html
@@ -278,6 +278,8 @@
     });
   });
 </script>
-
+<a href="cart.html" class="fixed bottom-5 right-5 bg-red-700 text-white px-4 py-2 rounded-full shadow-lg text-sm hover:bg-red-600 z-50">
+  🛒 Go to Cart
+</a>
 </body>
 </html>
