--- a/home.html
+++ b/home.html
@@ -14,272 +14,190 @@
       100% { opacity: 1; }
     }
     .best-seller-badge {
-      background-color: #b91c1c; /* red-700 */
-      color: white;
-      font-size: 0.6rem;
-      font-weight: 700;
-      padding: 0.15rem 0.4rem;
-      border-radius: 0.375rem;
-      position: absolute;
-      top: 0.5rem;
-      right: 0.5rem;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      z-index: 10;
+      background-color: #b91c1c; color: white; font-size: 0.6rem; font-weight: 700;
+      padding: 0.15rem 0.4rem; border-radius: 0.375rem; position: absolute;
+      top: 0.5rem; right: 0.5rem; text-transform: uppercase; letter-spacing: 0.05em; z-index: 10;
     }
   </style>
 </head>
-<body class="bg-yellow-50 text-gray-900 text-sm">
+<body class="bg-yellow-50 text-gray-900 text-sm relative">
 
-<!-- Header -->
-<header class="bg-red-800 text-white py-3 px-4 flex items-center justify-between shadow-md">
-  <h1 class="text-xl font-bold">MajeeoNuts</h1>
-  <nav class="space-x-4">
-    <a href="home.html" class="hover:underline">Home</a>
-    <a href="about.html" class="hover:underline">About Us</a>
-    <a href="contact.html" class="hover:underline">Contact Us</a>
-  </nav>
-  <input type="text" id="searchInput" placeholder="Search..." class="ml-4 px-2 py-1 rounded border text-gray-900 border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-600 text-xs w-32" />
-</header>
+  <!-- Header -->
+  <header class="bg-red-800 text-white py-3 px-4 flex items-center justify-between shadow-md">
+    <h1 class="text-xl font-bold">MajeeoNuts</h1>
+    <nav class="space-x-4 text-xs">
+      <a href="home.html" class="hover:underline">Home</a>
+      <a href="about.html" class="hover:underline">About Us</a>
+      <a href="contact.html" class="hover:underline">Contact Us</a>
+    </nav>
+    <input type="text" id="searchInput" placeholder="Search..." class="ml-4 px-2 py-1 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-600 w-32"/>
+  </header>
 
-<!-- Hero Section -->
-<section class="max-w-5xl mx-auto mt-4 px-2 flex flex-col md:flex-row gap-4">
-  <!-- Video -->
-  <div class="w-full md:w-2/3 rounded-lg overflow-hidden shadow">
-    <video class="w-full aspect-square h-[220px] object-cover rounded-lg" controls>
-      <source src="media/majeeoNuts_dryfruits_homepage_video.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-  <!-- Cart -->
-  <aside class="bg-white rounded-lg shadow p-4 h-max md:w-1/3">
-    <h2 class="text-lg font-bold mb-2">Your Cart</h2>
-    <div id="cart-items" class="space-y-3 text-xs">
-      <p class="text-gray-500">Your cart is empty.</p>
+  <!-- Hero Section -->
+  <section class="max-w-5xl mx-auto mt-4 px-2 flex flex-col md:flex-row gap-4">
+    <div class="w-full md:w-2/3 rounded-lg overflow-hidden shadow">
+      <video class="w-full aspect-square h-[220px] object-cover rounded-lg" controls>
+        <source src="media/majeeoNuts_dryfruits_homepage_video.mp4" type="video/mp4">
+      </video>
     </div>
-    <button id="checkout-btn" class="mt-3 w-full bg-red-700 text-white py-1 rounded text-sm" disabled>Checkout</button>
-  </aside>
-</section>
+    <aside class="bg-white rounded-lg shadow p-4 h-max md:w-1/3">
+      <h2 class="text-lg font-bold mb-2">Your Cart</h2>
+      <div id="cart-items" class="space-y-3 text-xs">
+        <p class="text-gray-500">Your cart is empty.</p>
+      </div>
+      <button id="checkout-btn" class="mt-3 w-full bg-red-700 text-white py-1 rounded text-sm" disabled>Checkout</button>
+    </aside>
+  </section>
 
-<!-- Product Grid -->
-<div class="max-w-5xl mx-auto p-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
+  <!-- Product Grid -->
+  <div class="max-w-5xl mx-auto p-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
+    <script>
+      const products = [
+        { name: "Premium Almonds (Badam)", img: "images/almonds.webp", price: 1000, desc: "High-quality California almonds, rich in antioxidants and healthy fats.", bestSeller: true, link: "product-almonds.html" },
+        { name: "Premium Cashews (Kaju)", img: "images/cashews.avif", price: 1200, desc: "Fresh, creamy cashews packed with protein and essential minerals.", bestSeller: true, link: "product-cashews.html" },
+        { name: "Mamra Almonds (Organic)", img: "images/mamra_almonds.webp", price: 1600, desc: "Premium organic Mamra almonds for extra crunch and health.", bestSeller: false, link: "product-mamra-almonds.html" },
+        { name: "Pista (Pistachios)", img: "images/Pista.jpg", price: 1400, desc: "Crunchy, lightly salted pistachios packed with flavor and nutrition.", bestSeller: false, link: "product-pista.html" },
+        { name: "Walnut (Akhrot)", img: "images/Walnut.png", price: 1300, desc: "Brain-boosting walnuts rich in Omega-3 and antioxidants.", bestSeller: false, link: "product-walnut.html" },
+        { name: "Raisins (Kishmish)", img: "images/Raisins.png", price: 600, desc: "Sweet, sun-dried raisins full of natural sugars and fiber.", bestSeller: false, link: "product-raisins.html" },
+        { name: "Mix Dry Fruits", img: "images/Mix_Dryfruits.jpg", price: 1500, desc: "A perfect mix of almonds, cashews, pista, raisins and figs.", bestSeller: false, link: "product-mix-dryfruits.html" },
+        { name: "Anjeer (Figs)", img: "images/Anjeer.png", price: 900, desc: "Naturally sweet sun-dried figs, rich in fiber and iron.", bestSeller: false, link: "product-anjeer.html" }
+      ];
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const container = document.querySelector(".grid");
+        products.forEach(p => {
+          const badge = p.bestSeller ? `<div class="best-seller-badge">Best Seller</div>` : "";
+          const html = `
+            <article class="relative bg-white rounded-lg shadow p-3">
+              ${badge}
+              <h2 class="font-semibold mb-1 text-xs leading-tight"><a href="${p.link}" class="hover:underline">${p.name}</a></h2>
+              <a href="${p.link}"><img src="${p.img}" alt="${p.name}" class="w-full h-32 object-cover rounded mb-2"/></a>
+              <p class="text-red-700 font-bold mb-1">₹${p.price}/kg</p>
+              <p class="text-gray-700 text-xs mb-1">${p.desc}</p>
+              <select class="p-1 border rounded mb-2 text-xs">
+                <option value="250">250g</option>
+                <option value="500">500g</option>
+                <option value="1000" selected>1kg</option>
+              </select>
+              <button class="add-to-cart w-full bg-red-600 text-white py-1 text-xs rounded" data-name="${p.name}" data-price="${p.price}">Add to Cart</button>
+            </article>`;
+          container.insertAdjacentHTML("beforeend", html);
+        });
+      });
+    </script>
+  </div>
+
+  <!-- Footer -->
+  <footer class="bg-white border-t mt-12">
+    <div class="bg-gray-100 py-6 px-6 lg:px-16 text-xs">
+      <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
+        <div><img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2"><p class="text-gray-600">Majeeo Nuts brings you carefully selected dry fruits from India and across the world.</p></div>
+        <div>
+          <h4 class="font-semibold text-gray-800 mb-1">Quick Links</h4>
+          <ul class="text-gray-600 space-y-1">
+            <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
+            <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
+            <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
+            <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="font-semibold text-gray-800 mb-1">Account Info</h4>
+          <ul class="text-gray-600 space-y-1">
+            <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
+            <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
+            <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
+            <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="font-semibold text-gray-800 mb-1">Contact Details</h4>
+          <ul class="text-gray-600 space-y-1">
+            <li>📍 Mumbai, India</li>
+            <li>✉️ maheshgawade7799@gmail.com</li>
+            <li>📞 +91-7483600212</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Cart & Payment Script -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
-    const products = [
-      { 
-        name: "Premium Almonds (Badam)", 
-        img: "images/almonds.webp", 
-        price: 1000, 
-        desc: "High-quality California almonds, rich in antioxidants and healthy fats.",
-        bestSeller: true,
-        link: "product-almonds.html"
-      },
-      { 
-        name: "Premium Cashews (Kaju)", 
-        img: "images/cashews.avif", 
-        price: 1200, 
-        desc: "Fresh, creamy cashews packed with protein and essential minerals.",
-        bestSeller: true,
-        link: "product-cashews.html"
-      },
-      { 
-        name: "Mamra Almonds (Organic)", 
-        img: "images/mamra_almonds.webp", 
-        price: 1600, 
-        desc: "Premium organic Mamra almonds for extra crunch and health.",
-        bestSeller: false,
-        link: "product-mamra-almonds.html"
-      },
-      { 
-        name: "Pista (Pistachios)", 
-        img: "images/Pista.jpg", 
-        price: 1400, 
-        desc: "Crunchy, lightly salted pistachios packed with flavor and nutrition.",
-        bestSeller: false,
-        link: "product-pista.html"
-      },
-      { 
-        name: "Walnut (Akhrot)", 
-        img: "images/Walnut.png", 
-        price: 1300, 
-        desc: "Brain-boosting walnuts rich in Omega-3 and antioxidants.",
-        bestSeller: false,
-        link: "product-walnut.html"
-      },
-      { 
-        name: "Raisins (Kishmish)", 
-        img: "images/Raisins.png", 
-        price: 600, 
-        desc: "Sweet, sun-dried raisins full of natural sugars and fiber.",
-        bestSeller: false,
-        link: "product-raisins.html"
-      },
-      { 
-        name: "Mix Dry Fruits", 
-        img: "images/Mix_Dryfruits.jpg", 
-        price: 1500, 
-        desc: "A perfect mix of almonds, cashews, pista, raisins and figs.",
-        bestSeller: false,
-        link: "product-mix-dryfruits.html"
-      },
-      { 
-        name: "Anjeer (Figs)", 
-        img: "images/Anjeer.png", 
-        price: 900, 
-        desc: "Naturally sweet sun-dried figs, rich in fiber and iron.",
-        bestSeller: false,
-        link: "product-anjeer.html"
-      }
-    ];
+    const cartItemsDiv = document.getElementById("cart-items");
+    const checkoutBtn = document.getElementById("checkout-btn");
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const container = document.querySelector(".grid");
-      products.forEach((p, index) => {
-        const badgeHTML = p.bestSeller 
-          ? `<div class="best-seller-badge">Best Seller</div>` 
-          : "";
-        const html = `
-        <article class="relative bg-white rounded-lg shadow p-3">
-          ${badgeHTML}
-          <h2 class="font-semibold mb-1 text-sm leading-tight">
-            <a href="${p.link}" class="hover:underline">${p.name}</a>
-          </h2>
-          <a href="${p.link}">
-            <img src="${p.img}" alt="${p.name}" class="w-full aspect-square object-cover rounded mb-2 h-32" />
-          </a>
-          <p class="text-red-700 font-bold mb-1">₹${p.price}/kg</p>
-          <p class="text-gray-700 text-xs mb-1">${p.desc}</p>
-          <select class="p-1 border rounded mb-2 quantity-select text-xs">
-            <option value="250">250g</option>
-            <option value="500">500g</option>
-            <option value="1000" selected>1kg</option>
-          </select>
-          <button class="add-to-cart w-full bg-red-600 text-white py-1 text-xs rounded" data-name="${p.name}" data-price-per-kg="${p.price}">Add to Cart</button>
-        </article>`;
-        container.insertAdjacentHTML("beforeend", html);
+    function getCart() {
+      return JSON.parse(localStorage.getItem("cart")) || [];
+    }
+    function saveCart(cart) {
+      localStorage.setItem("cart", JSON.stringify(cart));
+    }
+
+    function renderCart() {
+      const c = getCart();
+      cartItemsDiv.innerHTML = c.length === 0
+        ? '<p class="text-gray-500">Your cart is empty.</p>'
+        : c.map((item,i) => `
+          <div class="border p-2 rounded flex justify-between items-center">
+            <div><p class="font-semibold">${item.name}</p><p>${item.grams}g - ₹${item.price.toFixed(2)}</p></div>
+            <button onclick="removeItem(${i})" class="text-red-600 text-xs">Remove</button>
+          </div>`).join('');
+      checkoutBtn.disabled = c.length === 0;
+    }
+
+    function removeItem(i) {
+      const c = getCart(); c.splice(i,1); saveCart(c); renderCart();
+    }
+
+    document.addEventListener("click", e => {
+      if (e.target.classList.contains("add-to-cart")) {
+        const grams = parseInt(e.target.previousElementSibling.value);
+        const name = e.target.dataset.name;
+        const priceKg = parseFloat(e.target.dataset.price);
+        const price = (priceKg/1000)*grams;
+        const c = getCart();
+        c.push({ name, grams, price });
+        saveCart(c); renderCart();
+      }
+    });
+
+    checkoutBtn.addEventListener("click", () => {
+      const c = getCart();
+      const total = c.reduce((s,i)=>s+i.price,0);
+      new Razorpay({
+        key: "rzp_live_LIqOpioBHDIhG4",
+        amount: Math.round(total*100),
+        currency: "INR",
+        name: "MajeeoNuts",
+        description: "Premium Dry Fruits Purchase",
+        handler: function(resp){
+          alert("Payment successful! ID: "+resp.razorpay_payment_id);
+          localStorage.removeItem("cart");
+          renderCart();
+        },
+        theme: { color: "#b91c1c" }
+      }).open();
+    });
+
+    renderCart();
+  </script>
+
+  <!-- Search Filter -->
+  <script>
+    document.getElementById('searchInput').addEventListener('input', e => {
+      const q = e.target.value.toLowerCase();
+      document.querySelectorAll('article').forEach(a => {
+        a.style.display = a.innerText.toLowerCase().includes(q) ? 'block' : 'none';
       });
     });
   </script>
-</div>
 
-<!-- Footer -->
-<footer class="bg-white border-t mt-12">
-  <div class="bg-gray-100 py-6 px-4 sm:px-6 lg:px-16">
-    <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-xs">
-      <div>
-        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2">
-        <p class="text-gray-600">Majeeo Nuts brings you carefully selected dry fruits from India and across the world.</p>
-      </div>
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-1">Quick Links</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
-          <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
-          <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
-          <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-1">Account Info</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
-          <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
-          <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
-          <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-1">Contact Details</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li>📍 Mumbai, India</li>
-          <li>✉️ maheshgawade7799@gmail.com</li>
-          <li>📞 +91-7483600212</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</footer>
+  <!-- Floating Cart Button (Top Right) -->
+  <a href="cart.html" class="fixed top-4 right-4 bg-red-700 text-white px-4 py-2 rounded-full shadow-lg text-sm hover:bg-red-600 z-50">
+    🛒 Go to Cart
+  </a>
 
-<!-- Razorpay + Cart -->
-<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<script>
-  const cart = [];
-  const cartItemsDiv = document.getElementById("cart-items");
-  const checkoutBtn = document.getElementById("checkout-btn");
-
-  function renderCart() {
-    cartItemsDiv.innerHTML = "";
-    if (cart.length === 0) {
-      cartItemsDiv.innerHTML = '<p class="text-gray-500">Your cart is empty.</p>';
-      checkoutBtn.disabled = true;
-      return;
-    }
-    checkoutBtn.disabled = false;
-    cart.forEach((item, index) => {
-      const itemDiv = document.createElement("div");
-      itemDiv.className = "border p-2 rounded flex justify-between items-center";
-      itemDiv.innerHTML = `
-        <div>
-          <p class="font-semibold">${item.name}</p>
-          <p>${item.grams}g for ₹${item.price.toFixed(2)}</p>
-        </div>
-        <button class="text-red-600 text-xs" onclick="removeItem(${index})">Remove</button>
-      `;
-      cartItemsDiv.appendChild(itemDiv);
-    });
-  }
-
-  function removeItem(index) {
-    cart.splice(index, 1);
-    renderCart();
-  }
-
-  document.addEventListener("click", function (e) {
-    if (e.target.classList.contains("add-to-cart")) {
-      const name = e.target.dataset.name;
-      const pricePerKg = parseInt(e.target.dataset.pricePerKg);
-      const grams = parseInt(e.target.previousElementSibling.value);
-      const price = (pricePerKg / 1000) * grams;
-      cart.push({ name, grams, price });
-      renderCart();
-    }
-  });
-
-  checkoutBtn.addEventListener("click", () => {
-    const total = cart.reduce((sum, item) => sum + item.price, 0);
-    const options = {
-      key: "rzp_live_LIqOpioBHDIhG4",
-      amount: Math.round(total * 100),
-      currency: "INR",
-      name: "MajeeoNuts",
-      description: "Premium Dry Fruits Purchase",
-      handler: function (response) {
-        alert("Payment successful! Payment ID: " + response.razorpay_payment_id);
-        cart.length = 0;
-        renderCart();
-      },
-      prefill: { email: "maheshgawade7799@gmail.com" },
-      theme: { color: "#b91c1c" }
-    };
-    const rzp = new Razorpay(options);
-    rzp.open();
-  });
-
-  renderCart();
-</script>
-
-<!-- Search Filter -->
-<script>
-  const searchInput = document.getElementById("searchInput");
-  searchInput.addEventListener("input", () => {
-    const query = searchInput.value.toLowerCase();
-    document.querySelectorAll("article").forEach(article => {
-      const name = article.querySelector("h2").innerText.toLowerCase();
-      article.style.display = name.includes(query) ? "block" : "none";
-    });
-  });
-</script>
-<a href="cart.html" class="fixed bottom-5 right-5 bg-red-700 text-white px-4 py-2 rounded-full shadow-lg text-sm hover:bg-red-600 z-50">
-  🛒 Go to Cart
-</a>
 </body>
 </html>
